# glum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  sample.md  test.md
.github/workflows/: publish-crates.yml  release-binaries.yml  test.yml
scripts/: build_ico.py  install.sh
src/: app.rs  cli.rs  clipboard.rs  highlight.rs  layout.rs  lib.rs  main.rs  positions.rs  render.rs  theme.rs  typography.rs  watch.rs
tests/: render.rs
