[package]
name = "glum"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
description = "A reading-focused terminal markdown viewer"
license = "Apache-2.0"
authors = ["Jascha Wanger <https://jascha.me>"]
repository = "https://github.com/jaschadub/glum"
readme = "README.md"
keywords = ["markdown", "tui", "reader", "cli"]
categories = ["command-line-utilities", "text-processing"]
build = "build.rs"

[package.metadata.docs.rs]
# Ensure docs.rs builds the full API surface with the same flags we use
# locally. `--cfg docsrs` lets items mark themselves docs-only if needed.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Debian packaging — consumed by `cargo deb`. Runtime deps are pinned to
# just libc6 (rather than $auto) so cross-compiled aarch64 builds don't
# trip dpkg-shlibdeps on the x86_64 CI runner. The asset paths use
# `target/release/...`; cargo-deb rewrites that to the actual target dir
# when `--target <triple>` is passed. The `extras/` dir is produced by
# the `assets` workflow job and downloaded into each matrix build.
[package.metadata.deb]
maintainer = "Jascha <jascha@thirdkey.ai>"
section = "utils"
priority = "optional"
depends = "libc6"
extended-description = """\
A reading-focused terminal markdown viewer — more like \"Reader Mode in your \
terminal\" than a markdown-as-markdown renderer. Optimizes for reading prose: \
headings become typographic styles, links show their URL inline, code blocks \
are framed and highlighted, tables wrap rather than truncate, and the file \
scrolls a page at a time like less."""
assets = [
    ["target/release/glum", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/glum/LICENSE", "644"],
    ["NOTICE", "usr/share/doc/glum/NOTICE", "644"],
    ["README.md", "usr/share/doc/glum/README.md", "644"],
    ["CHANGELOG.md", "usr/share/doc/glum/CHANGELOG.md", "644"],
    ["extras/glum.bash", "usr/share/bash-completion/completions/glum", "644"],
    ["extras/_glum", "usr/share/zsh/site-functions/_glum", "644"],
    ["extras/glum.fish", "usr/share/fish/vendor_completions.d/glum.fish", "644"],
    ["extras/glum.1", "usr/share/man/man1/glum.1", "644"],
]

# RPM packaging — consumed by `cargo generate-rpm`.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/glum", dest = "/usr/bin/glum", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/glum/LICENSE", mode = "644", doc = true },
    { source = "NOTICE", dest = "/usr/share/doc/glum/NOTICE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/glum/README.md", mode = "644", doc = true },
    { source = "CHANGELOG.md", dest = "/usr/share/doc/glum/CHANGELOG.md", mode = "644", doc = true },
    { source = "extras/glum.bash", dest = "/usr/share/bash-completion/completions/glum", mode = "644" },
    { source = "extras/_glum", dest = "/usr/share/zsh/site-functions/_glum", mode = "644" },
    { source = "extras/glum.fish", dest = "/usr/share/fish/vendor_completions.d/glum.fish", mode = "644" },
    { source = "extras/glum.1", dest = "/usr/share/man/man1/glum.1", mode = "644" },
]

[lib]
name = "glum_lib"
path = "src/lib.rs"

[[bin]]
name = "glum"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
pulldown-cmark = { version = "0.12", default-features = false }
textwrap = { version = "0.16", default-features = false, features = ["unicode-linebreak", "unicode-width"] }
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sha2 = "0.10"
anyhow = "1"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 0
debug = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints that are noisy for this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
too_many_lines = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
return_self_not_must_use = "allow"
unnecessary_wraps = "allow"
redundant_closure_for_method_calls = "allow"
